# aoc-2018

aof01/: README.md  aof01.cabal
aof01/src/: Main.hs
aof02/: LICENSE  README.md  aof02.cabal
aof02/src/: Main.hs
aof03/: README.md  aof03.cabal  input2.txt
aof03/src/: Main.hs
aof05/: README.md  aof05.cabal
aof05/src/: Main.hs
