name:                aof01
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/paulcadman/aof01#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Cadman
maintainer:          pcadman@gmail.com
copyright:           Copyright (c) Paul Cadman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aof01
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       containers
